--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcsh 'Book clubs (Bookselling)'
 - !lcsh 'Book collecting'
 - !lcsh 'Bibliomania'
+- GITenberg
 title: Book-Lovers, Bibliomaniacs and Book Clubs
 url: http://www.gutenberg.org/ebooks/22605
